<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light">

    <ImageView
        android:id="@+id/img"
        android:layout_width="60dp"
        android:layout_height="60dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"

        android:contentDescription="@string/football"
        android:src="@drawable/football" />


    <EditText
        android:id="@+id/speed"
        android:layout_width="100dp"
        android:layout_height="50dp"

        android:layout_alignParentStart="true"

        android:inputType="number"
        android:autofillHints="@android:string/autofill"
        android:hint="@string/speed_input_hint"
        />
    <!--    -->


    <EditText
        android:id="@+id/angle"
        android:layout_width="100dp"
        android:layout_height="50dp"

        android:layout_toEndOf="@id/speed"

        android:inputType="number"
        android:autofillHints="@android:string/autofill"
        android:hint="@string/angle_input_hint"
        />

    <Button
        android:id="@+id/button_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/temp_button_text"

        android:layout_toEndOf="@id/angle"
        />

</RelativeLayout>