<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/rel_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/visualisation_of_calculated_values"
            android:layout_marginBottom="4dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headline"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/textview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="4dp"

                android:text="@string/vis_time"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textview_x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="4dp"

                android:text="@string/vis_x"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="4dp"

                android:text="@string/vis_y"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_x"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_vis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_point"
        android:layout_below="@id/rel_layout_header"/>
</RelativeLayout>